--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container">
         <img src="https://drive.google.com/file/d/1I-jkwjn65FrqDOsNLCRK6_x4_Z18j87y/view?usp=sharing" alt="Profile Picture" class="profile-pic">
         <h1>Harsha Pathmasiri</h1>
-        <p>Welcome to my personal portfolio. I'm creating some stuffs on internet. Connect with me on social media!</p>
+        <p>I'm creating some stuffs on internet. Connect with me on social media!</p>
         <ul class="social-links">
             <li><a href="https://www.linkedin.com/in/harsha-pathmasiri-b68411133/" target="_blank">LinkedIn</a></li>
             <li><a href="https://www.instagram.com/harsha_pathmasiri?igsh=OGQ5ZDc2ODk2ZA==" target="_blank">Instagram</a></li>
