--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://github.com/harshapathmasiri/harshapathmasiri.github.io/assets/79796988/502b138a-42c3-474b-b71f-e042d31279a6" class="profile-pic" alt="Me">
+        <img src="https://drive.google.com/file/d/1I-jkwjn65FrqDOsNLCRK6_x4_Z18j87y/view?usp=sharing" class="profile-pic" alt="Me">
         <h1>Harsha Pathmasiri</h1>
         <p>I'm creating some stuff on the internet. Connect with me on social media!</p>
         <ul class="social-links">
