--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://drive.google.com/file/d/1I-jkwjn65FrqDOsNLCRK6_x4_Z18j87y/view?usp=sharing">
+        <img src="https://ibb.co/37rFxXZ">
         <h1>Harsha Pathmasiri</h1>
         <p>I'm creating some stuff on the internet. Connect with me on social media!</p>
         <ul class="social-links">
