--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://ibb.co/37rFxXZ">
+        <img src="https://ibb.co/37rFxXZ"> alt="Profile Picture" class="profile-pic">
         <h1>Harsha Pathmasiri</h1>
         <p>I'm creating some stuff on the internet. Connect with me on social media!</p>
         <ul class="social-links">
