--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://ibb.co/37rFxXZ"> alt="Profile Picture" class="profile-pic">
+        <img src="https://github.com/harshapathmasiri/harshapathmasiri.github.io/assets/79796988/502b138a-42c3-474b-b71f-e042d31279a6" class="profile-pic" alt="Me">
         <h1>Harsha Pathmasiri</h1>
-        <p>I'm creating some stuff on the internet. Connect with me on social media!</p>
+        <p>I'm creating some stuffs on internet. Connect with me on social media!</p>
         <ul class="social-links">
             <li><a href="https://www.linkedin.com/in/harsha-pathmasiri-b68411133/" target="_blank">LinkedIn</a></li>
             <li><a href="https://www.instagram.com/harsha_pathmasiri?igsh=OGQ5ZDc2ODk2ZA==" target="_blank">Instagram</a></li>
