--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://github.com/harshapathmasiri/harshapathmasiri.github.io/assets/79796988/502b138a-42c3-474b-b71f-e042d31279a6" class="profile-pic" alt="Me">
+        <img src="![Me](https://github.com/harshapathmasiri/harshapathmasiri.github.io/assets/79796988/502b138a-42c3-474b-b71f-e042d31279a6)
+" class="profile-pic">
         <h1>Harsha Pathmasiri</h1>
         <p>I'm creating some stuffs on internet. Connect with me on social media!</p>
         <ul class="social-links">
             <li><a href="https://www.linkedin.com/in/harsha-pathmasiri-b68411133/" target="_blank">LinkedIn</a></li>
             <li><a href="https://www.instagram.com/harsha_pathmasiri?igsh=OGQ5ZDc2ODk2ZA==" target="_blank">Instagram</a></li>
-            <li><a href="https://web.facebook.com/harsha.padmasiri.1" target="_blank">Facebook</a></li>
+            <li><a href="https://web.facebook.com/harsha.padmasiri.1" target="_blank" target="_blank">Facebook</a></li>
             <li><a href="https://www.tiktok.com/@harshapathmasiri?_t=8n5XckQhlyy&_r=1" target="_blank">TikTok</a></li>
             <li><a href="https://www.youtube.com/channel/UCKjoCI4hSn_dxtWCFYEybVg" target="_blank">YouTube</a></li>
             <li><a href="https://steamcommunity.com/id/harshamax" target="_blank">Steam</a></li>
