--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="![Me](https://github.com/harshapathmasiri/harshapathmasiri.github.io/assets/79796988/502b138a-42c3-474b-b71f-e042d31279a6)
+        <img src="![Me](https://images.app.goo.gl/UFnaejZELK2B2tAS6)
 " class="profile-pic">
         <h1>Harsha Pathmasiri</h1>
         <p>I'm creating some stuffs on internet. Connect with me on social media!</p>
