--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="![Me](https://images.app.goo.gl/UFnaejZELK2B2tAS6)
+        <img src="![Me](Photograph.jpg)
 " class="profile-pic">
         <h1>Harsha Pathmasiri</h1>
         <p>I'm creating some stuffs on internet. Connect with me on social media!</p>
