--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="![Me](Photograph.jpg)
+        <img src="![Me](https://github.com/harshapathmasiri/harshapathmasiri.github.io/blob/556697f628a477d28b431361bc55267749179da1/Photograph.jpg)
 " class="profile-pic">
         <h1>Harsha Pathmasiri</h1>
         <p>I'm creating some stuffs on internet. Connect with me on social media!</p>
