--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/harsha_pathmasiri?igsh=OGQ5ZDc2ODk2ZA==" target="_blank">
+                            <a href="https://https://www.instagram.com/harsha.pathmasiri?igsh=OGQ5ZDc2ODk2ZA==" target="_blank">
                                 <img src="dist/images/instagram.png" alt="instagram">
                             </a>
                         </li>
